--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -219,26 +219,26 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/AOE/Splatter/AOE_Blue
-MRUItem1=/Game/Blueprints/AOE/Splatter/AOE_Red
-MRUItem2=/Game/PaintParticleActor_Blueprint
-MRUItem3=/Game/Blueprints/AOE/Splatter/AOE_Yellow
-MRUItem4=/Game/Blueprints/AOE/Splatter/AOE_Magenta
-MRUItem5=/Game/Blueprints/AOE/Projectile/AO1E
-MRUItem6=/Game/Player/ThirdPersonCharacter
-MRUItem7=/Game/Levels/Forest
-MRUItem8=/Game/Levels/Bubbleopolis
-MRUItem9=/Game/MushroomBoys/Mush2/Mush2_
-MRUItem10=/Game/MushroomBoys/Mush1/Mush1
-MRUItem11=/Game/Audio/Music/Wavs/Forest
-MRUItem12=/Game/Levels/NewSewer
-MRUItem13=/Game/Levels/Castle
-MRUItem14=/Game/Sewer/gatee
-MRUItem15=/Game/Levels/PersistentLevel
-MRUItem16=/Game/Blueprints/MySaveGame
-MRUItem17=/Game/Movies/Cutscene1
-MRUItem18=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem19=/Game/LadderClimb/Ladder_BP
+MRUItem0=/Game/Blueprints/AOE/Projectile/AO1E
+MRUItem1=/Game/MovableMush1
+MRUItem2=/Game/Blueprints/AOE/Splatter/AOE_Blue
+MRUItem3=/Game/Blueprints/AOE/Splatter/AOE_Red
+MRUItem4=/Game/PaintParticleActor_Blueprint
+MRUItem5=/Game/Blueprints/AOE/Splatter/AOE_Yellow
+MRUItem6=/Game/Blueprints/AOE/Splatter/AOE_Magenta
+MRUItem7=/Game/Player/ThirdPersonCharacter
+MRUItem8=/Game/Levels/Forest
+MRUItem9=/Game/Levels/Bubbleopolis
+MRUItem10=/Game/MushroomBoys/Mush2/Mush2_
+MRUItem11=/Game/MushroomBoys/Mush1/Mush1
+MRUItem12=/Game/Audio/Music/Wavs/Forest
+MRUItem13=/Game/Levels/NewSewer
+MRUItem14=/Game/Levels/Castle
+MRUItem15=/Game/Sewer/gatee
+MRUItem16=/Game/Levels/PersistentLevel
+MRUItem17=/Game/Blueprints/MySaveGame
+MRUItem18=/Game/Movies/Cutscene1
+MRUItem19=/Game/Blueprints/UI/Widgets/MainMenu
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2940,6 +2940,22 @@ PaintParticleActor_Blueprint_C.Rendering=True
 PaintParticleActor_Blueprint_C.Collision=True
 PaintParticleActor_Blueprint_C.Actor=True
 PaintParticleActor_Blueprint_C.Input=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.ComponentTick=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -2954,7 +2970,7 @@ Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
-Info="\"Object.Light.LightComponent.Object.Light.LightColor\" "
+Info=
 None=======
 None=======
 None=======
@@ -2993,7 +3009,7 @@ GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent=
 ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -3008,8 +3024,8 @@ Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
@@ -3020,7 +3036,7 @@ SkeletalBodySetup="\"Object.AggGeom\" \"Object.AggGeom.SphylElems\" \"Object.Agg
 BodySetup=
 BodySetupCore=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
-SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMesh=
 MaterialParameterCollection="\"Object.Material.ScalarParameters\" \"Object.Material.ScalarParameters.ScalarParameters[1]\" \"Object.Material.ScalarParameters.ScalarParameters[2]\" "
 AnimGraphNode_SequencePlayer="\"Object.Settings.SyncGroup\" "
@@ -3664,7 +3680,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=186.000 Y=10.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1600.000 Y=964.000
+WindowSize=X=1605.000 Y=969.000
 None=======
 InitiallyMaximized=True
 
@@ -5697,6 +5713,7 @@ BubbleWoman_Ani_C=
 BubbleWoman_BP_C=BoxComponent.Collision.Collision,
 PLant_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 ReactivePlant_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
+Mechanic_Test_C=
 
 [PlacementMode]
 RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst.MM_Sewer_Floor_Inst;
