Bubble Wands and Grass

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -219,26 +219,26 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Geometry/Meshes/Material__5
-MRUItem1=/Game/Geometry/Meshes/SM_ToonGrass
-MRUItem2=/Game/KiteDemo/Environments/Foliage/Grass/FieldGrass/Mat_ToonGrass_Anim_Inst
-MRUItem3=/Game/Geometry/Meshes/Plants/SM_Grass
-MRUItem4=/Game/Geometry/Meshes/SM_Grass_L
-MRUItem5=/Game/Levels/Bubbleopolis
-MRUItem6=/Game/Bubbleopolis/Current/Materials/ground
-MRUItem7=/Game/Audio/Music/Cues/BGM_Bubbleopolis_Color_Theme_Cue
-MRUItem8=/Game/Audio/Music/Cues/BubbleFactoryColor_Cue
-MRUItem9=/Game/Audio/Music/Cues/BGM_Bubbleopolis_Gray_Theme_Cue
-MRUItem10=/Game/Audio/Music/Cues/BGM_Forest_Color_Theme_Cue
-MRUItem11=/Game/Audio/Music/Cues/BGM_Forest_Grey_Cue
-MRUItem12=/Game/Levels/Forest
-MRUItem13=/Game/Audio/Music/Cues/Main_Menu_Looping
-MRUItem14=/Game/Audio/Music/Cues/BGM_MainMenu
-MRUItem15=/Game/Levels/MainMenu
-MRUItem16=/Game/MovableMush3
-MRUItem17=/Game/Axe/mesh/MovableAxe
-MRUItem18=/Game/PaintParticleActor_Blueprint
-MRUItem19=/Game/Player/ThirdPersonCharacter
+MRUItem0=/Game/Geometry/Meshes/SM_ToonGrass
+MRUItem1=/Game/Geometry/Meshes/Mat_BubGrass
+MRUItem2=/Game/Materials/T_PurpleGrass_D
+MRUItem3=/Game/Materials/Mat_Bubble_Wand_Turtle_Inst
+MRUItem4=/Game/BubbleWands/Wand_Turtle
+MRUItem5=/Game/Materials/Bubble_Wand_Green
+MRUItem6=/Game/BubbleWands/Wand_Bunch
+MRUItem7=/Game/Materials/Mat_Bubble_Wand_Bunch_Inst
+MRUItem8=/Game/Materials/Mat_Bubble_Wand_Stack_Inst
+MRUItem9=/Game/Materials/Mat_Bubble_Wand_Trio_Inst
+MRUItem10=/Game/Materials/Mat_Bubble_Wand_Diamond_Inst
+MRUItem11=/Game/Materials/Mat_Bubble_Wand_Flower_Inst
+MRUItem12=/Game/Materials/Mat_Bubble_Wand_Wheel_Inst
+MRUItem13=/Game/Materials/Mat_Bubble_Wand_Butterfly_Inst
+MRUItem14=/Game/Materials/Mat_Bubble_Wand_Fractal_Inst
+MRUItem15=/Game/Materials/Mat_Bubble_Wand
+MRUItem16=/Game/Materials/Mat_Bubble_Wand_Sun_Inst
+MRUItem17=/Game/Levels/Bubbleopolis
+MRUItem18=/Game/Geometry/Meshes/Material__5
+MRUItem19=/Game/KiteDemo/Environments/Foliage/Grass/FieldGrass/Mat_ToonGrass_Anim_Inst
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -3030,14 +3030,14 @@ SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.B
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 SkeletalMesh=
-StreamableRenderAsset=
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 LODInfoUILayout=
 SkeletalBodySetup="\"Object.AggGeom\" \"Object.AggGeom.SphylElems\" \"Object.AggGeom.SphylElems.SphylElems[0]\" \"Object.AggGeom.SphylElems.SphylElems[0].Rotation\" \"Object.WalkableSlopeOverride\" \"Object.DefaultInstance.WalkableSlopeOverride\" "
 BodySetup=
 BodySetupCore=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-StaticMesh=
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MaterialParameterCollection="\"Object.Material.ScalarParameters\" \"Object.Material.ScalarParameters.ScalarParameters[1]\" \"Object.Material.ScalarParameters.ScalarParameters[2]\" "
 AnimGraphNode_SequencePlayer="\"Object.Settings.SyncGroup\" "
 AnimGraphNode_AssetPlayerBase="\"Object.Settings.SyncGroup\" "
@@ -3090,8 +3090,8 @@ PaperSprite="\"Object.Sprite.SourceUV\" "
 SoundCue="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
 SoundBase="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" \"Object.ChannelNames\" "
-MaterialExpressionParameter="\"Object.DefaultValue\" \"Object.ChannelNames\" "
-MaterialExpression="\"Object.DefaultValue\" \"Object.ChannelNames\" "
+MaterialExpressionParameter="\"Object.DefaultValue\" "
+MaterialExpression=
 MaterialEditorInstanceConstant=
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 NewSewer_C=
@@ -3125,6 +3125,10 @@ gatee_C=
 SoundWave="\"Object.Voice Management.Voice Management|Concurrency\" \"Object.Voice Management.Voice Management|Priority\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
 ParticleSystemComponent="\"Object.Lighting.LightingChannels\" "
 FXSystemComponent="\"Object.Lighting.LightingChannels\" "
+MaterialExpressionTextureSampleParameter2D="\"Object.ChannelNames\" "
+MaterialExpressionTextureSampleParameter="\"Object.ChannelNames\" "
+MaterialExpressionTextureSample="\"Object.ChannelNames\" "
+MaterialExpressionTextureBase="\"Object.ChannelNames\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -3624,6 +3628,20 @@ None=======
 /Game/Audio/Music/Cues/BGM_Bubbleopolis_Color_Theme_Cue.BGM_Bubbleopolis_Color_Theme_Cue=1
 /Game/Bubbleopolis/Current/Materials/ground.ground=1
 /Game/Geometry/Meshes/Plants/SM_Grass.SM_Grass=1
+/Game/Materials/Mat_Bubble_Wand_Sun_Inst.Mat_Bubble_Wand_Sun_Inst=1
+/Game/Geometry/Meshes/Mat_BubGrass.Mat_BubGrass=1
+/Game/Materials/Mat_Bubble_Wand.Mat_Bubble_Wand=1
+/Game/Materials/Mat_Bubble_Wand_Fractal_Inst.Mat_Bubble_Wand_Fractal_Inst=1
+/Game/Materials/Mat_Bubble_Wand_Butterfly_Inst.Mat_Bubble_Wand_Butterfly_Inst=1
+/Game/Materials/Mat_Bubble_Wand_Wheel_Inst.Mat_Bubble_Wand_Wheel_Inst=1
+/Game/Materials/Mat_Bubble_Wand_Flower_Inst.Mat_Bubble_Wand_Flower_Inst=1
+/Game/Materials/Mat_Bubble_Wand_Diamond_Inst.Mat_Bubble_Wand_Diamond_Inst=1
+/Game/Materials/Mat_Bubble_Wand_Trio_Inst.Mat_Bubble_Wand_Trio_Inst=1
+/Game/Materials/Mat_Bubble_Wand_Stack_Inst.Mat_Bubble_Wand_Stack_Inst=1
+/Game/Materials/Mat_Bubble_Wand_Bunch_Inst.Mat_Bubble_Wand_Bunch_Inst=1
+/Game/BubbleWands/Wand_Bunch.Wand_Bunch=1
+/Game/Materials/Mat_Bubble_Wand_Turtle_Inst.Mat_Bubble_Wand_Turtle_Inst=1
+/Game/Materials/T_PurpleGrass_D.T_PurpleGrass_D=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -5255,7 +5273,7 @@ PlanarCut.TimeStamp=2021.03.22-23.27.49
 PlanarCut.LastCompileMethod=External
 GooglePADEditor.TimeStamp=2021.03.22-23.34.27
 GooglePADEditor.LastCompileMethod=External
-TextureEditor.TimeStamp=2021.02.15-00.30.01
+TextureEditor.TimeStamp=2021.03.22-23.04.04
 TextureEditor.LastCompileMethod=External
 SkeletonEditor.TimeStamp=2021.02.11-02.29.36
 SkeletonEditor.LastCompileMethod=External
@@ -5294,7 +5312,7 @@ MRUItem11=/Game/Levels/testYellow
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LoadErrors
+LastLogListing=PIE
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -5599,7 +5617,7 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
 CameraComponent=CameraComponent.PostProcess.Lens,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Glints,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Wave Direction,MaterialEditorInstanceConstant.ParameterGroups.Waves,MaterialEditorInstanceConstant.ParameterGroups.Wall,MaterialEditorInstanceConstant.ParameterGroups.Diffuse,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Specular,MaterialEditorInstanceConstant.ParameterGroups.Subsurface,MaterialEditorInstanceConstant.ParameterGroups.WPO,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.General.LightmassSettings,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Glints,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Wave Direction,MaterialEditorInstanceConstant.ParameterGroups.Waves,MaterialEditorInstanceConstant.ParameterGroups.Wall,MaterialEditorInstanceConstant.ParameterGroups.Diffuse,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Specular,MaterialEditorInstanceConstant.ParameterGroups.Subsurface,MaterialEditorInstanceConstant.ParameterGroups.WPO,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 MaterialInstanceConstant=
 LinuxTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
 MacTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
@@ -5622,7 +5640,7 @@ BrushComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.
 Skybox_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 SceneFinish_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
-StaticMesh=StaticMesh.ImportSettings.File Path,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Mesh,
+StaticMesh=StaticMesh.ImportSettings.File Path,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Mesh,StaticMesh.Collision.Collision,
 GreenPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Brush=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 PrimitiveComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
@@ -5784,6 +5802,7 @@ FileMediaSource.File=True
 CharacterMovementComponent.Character Movement (General Settings)=True
 CharacterMovementComponent.Character Movement: Walking=True
 SkeletalMeshComponent.Rendering=True
+StaticMesh.LODCustomMode=False
 
 [FEditorModeTools]
 CoordSystem=1
@@ -5835,6 +5854,7 @@ None=======
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
